sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__between-lhs-nested-scalar-subquery.snap
---
source: subqueries.sqltest
expression: SELECT id FROM products WHERE ((SELECT max(id) FROM products) + 1) BETWEEN 2 AND 4;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0    Init          0  35   0                   0  Start at 35
   1    Once         17   0   0                   0  goto 17
   2    BeginSubrtn   2   0   0                   0  r[2]=NULL
   3    Null          0   1   0                   0  r[1]=NULL
   4    Null          0   4   0                   0  r[4]=NULL
   5    Integer       1   5   0                   0  r[5]=1; LIMIT counter
   6    IfNot         5  13   0                   0  if !r[5] goto 13
   7    OpenRead      0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   8    Last          0  13   0                   0
   9      RowId       0   6   0                   0  r[6]=products.rowid
  10      AggStep     0   6   4  max(Binary)      0  accum=r[4] step(r[6])
  11      Goto        0  13   0                   0
  12    Prev          0   9   0                   0
  13    AggFinal      0   4   0  max              0  accum=r[4]
  14    Copy          4   3   0                   0  r[3]=r[4]
  15    Copy          3   1   0                   0  r[1]=r[3]
  16  Return          2   0   1                   0
  17  OpenRead        1   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  18  Copy            1  10   0                   0  r[10]=r[1]
  19  Add            10  11   9                   0  r[9]=r[10]+r[11]
  20  Copy            9  13   0                   0  r[13]=r[9]
  21  Integer         1  12   0                   0  r[12]=1
  22  Ge             13  14  24                   0  if r[13]>=r[14] goto 24
  23  ZeroOrNull     13  12  14                   0  ((r[13]=NULL)|(r[14]=NULL)) ? r[12]=NULL : r[12]=0
  24  Copy            9  16   0                   0  r[16]=r[9]
  25  Integer         1  15   0                   0  r[15]=1
  26  Le             16  17  28                   0  if r[16]<=r[17] goto 28
  27  ZeroOrNull     16  15  17                   0  ((r[16]=NULL)|(r[17]=NULL)) ? r[15]=NULL : r[15]=0
  28  And            15  12   8                   0  r[8]=(r[12] && r[15])
  29  IfNot           8  34   1                   0  if !r[8] goto 34
  30  Rewind          1  34   0                   0  Rewind table products
  31    RowId         1   7   0                   0  r[7]=products.rowid
  32    ResultRow     7   1   0                   0  output=r[7]
  33  Next            1  31   0                   0
  34  Halt            0   0   0                   0
  35  Transaction     0   1  11                   0  iDb=0 tx_mode=Read
  36  Integer         1  11   0                   0  r[11]=1
  37  Integer         2  14   0                   0  r[14]=2
  38  Integer         4  17   0                   0  r[17]=4
  39  Goto            0   1   0                   0
