sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__between-lhs-scalar-subquery.snap
---
source: subqueries.sqltest
expression: SELECT id FROM products WHERE (SELECT max(id) FROM products) BETWEEN 1 AND 3;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0    Init          0  34   0                   0  Start at 34
   1    Once         17   0   0                   0  goto 17
   2    BeginSubrtn   2   0   0                   0  r[2]=NULL
   3    Null          0   1   0                   0  r[1]=NULL
   4    Null          0   4   0                   0  r[4]=NULL
   5    Integer       1   5   0                   0  r[5]=1; LIMIT counter
   6    IfNot         5  13   0                   0  if !r[5] goto 13
   7    OpenRead      0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   8    Last          0  13   0                   0
   9      RowId       0   6   0                   0  r[6]=products.rowid
  10      AggStep     0   6   4  max(Binary)      0  accum=r[4] step(r[6])
  11      Goto        0  13   0                   0
  12    Prev          0   9   0                   0
  13    AggFinal      0   4   0  max              0  accum=r[4]
  14    Copy          4   3   0                   0  r[3]=r[4]
  15    Copy          3   1   0                   0  r[1]=r[3]
  16  Return          2   0   1                   0
  17  OpenRead        1   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  18  Copy            1   9   0                   0  r[9]=r[1]
  19  Copy            9  11   0                   0  r[11]=r[9]
  20  Integer         1  10   0                   0  r[10]=1
  21  Ge             11  12  23                   0  if r[11]>=r[12] goto 23
  22  ZeroOrNull     11  10  12                   0  ((r[11]=NULL)|(r[12]=NULL)) ? r[10]=NULL : r[10]=0
  23  Copy            9  14   0                   0  r[14]=r[9]
  24  Integer         1  13   0                   0  r[13]=1
  25  Le             14  15  27                   0  if r[14]<=r[15] goto 27
  26  ZeroOrNull     14  13  15                   0  ((r[14]=NULL)|(r[15]=NULL)) ? r[13]=NULL : r[13]=0
  27  And            13  10   8                   0  r[8]=(r[10] && r[13])
  28  IfNot           8  33   1                   0  if !r[8] goto 33
  29  Rewind          1  33   0                   0  Rewind table products
  30    RowId         1   7   0                   0  r[7]=products.rowid
  31    ResultRow     7   1   0                   0  output=r[7]
  32  Next            1  30   0                   0
  33  Halt            0   0   0                   0
  34  Transaction     0   1  11                   0  iDb=0 tx_mode=Read
  35  Integer         1  12   0                   0  r[12]=1
  36  Integer         3  15   0                   0  r[15]=3
  37  Goto            0   1   0                   0
