sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__correlated-subquery-salary.snap
---
source: subqueries.sqltest
expression: |-
  SELECT e.id, e.name, e.department, e.salary
      FROM employees e
      WHERE e.salary > (
          SELECT avg(e2.salary)
          FROM employees e2
          WHERE e2.department = e.department
      );
info:
  statement_type: SELECT
  tables:
  - employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN employees AS e
`--SEARCH scalar_subquery_t2 USING INDEX ephemeral_subquery_t2 (correlation_key_0=?)
   |--SCAN employees AS e2
   `--USE SORTER FOR GROUP BY

BYTECODE
addr  opcode                  p1  p2  p3  p4              p5  comment
   0          Init             0  67   0                   0  Start at 67
   1          Once            49   0   0                   0  goto 49
   2          OpenEphemeral    0   0   0                   0  cursor=0 is_table=false
   3          Null             0   8   0                   0  r[8]=NULL
   4          SorterOpen       1   2   0  k(1,Binary)      0  cursor=1
   5          Integer          0   5   0                   0  r[5]=0; clear group by abort flag
   6          Null             0   6   0                   0  r[6]=NULL; initialize group by comparison registers to NULL
   7          Gosub           12  46   0                   0  ; go to clear accumulator subroutine
   8          OpenRead         3   7   0  k(5,B,B,B,B,B)   0  table=employees, root=7, iDb=0
   9          Rewind           3  15   0                   0  Rewind table employees
  10            ColumnRange    3   3  10  2                0  r[10..11]=employees.department..salary
  11            RealAffinity  11   0   0                   0
  12            MakeRecord    10   2   9                   0  r[9]=mkrec(r[10..11])
  13            SorterInsert   1   9   0  0                0  key=r[9]
  14          Next             3  10   0                   1
  15          OpenPseudo       2   9   2                   0  2 columns in r[9]
  16          SorterSort       1  31   0                   0
  17            SorterData     1   9   2                   0  r[9]=data
  18            Column         2   0  13                   0  r[13]=pseudo.column 0
  19            Compare        6  13   1  k(1, Binary)     0  r[6..6]==r[13..13]
  20            Jump          21  25  21                   0  ; start new group if comparison is not equal
  21            Gosub          3  35   0                   0  ; check if ended group had data, and output if so
  22            Move          13   6   1                   0  r[6..6]=r[13..13]
  23            IfPos          5  49   0                   0  r[5]>0 -> r[5]-=0, goto 49; check abort flag
  24            Gosub         12  46   0                   0  ; goto clear accumulator subroutine
  25            Column         2   1  14                   0  r[14]=pseudo.column 1
  26            AggStep        0  14   8  avg              0  accum=r[8] step(r[14])
  27            If             4  29   0                   0  if r[4] goto 29; don't emit group columns if continuing existing group
  28            Column         2   0   7                   0  r[7]=pseudo.column 0
  29            Integer        1   4   0                   0  r[4]=1; indicate data in accumulator
  30          SorterNext       1  17   0                   0
  31          Gosub            3  35   0                   0  ; emit row for final group
  32          Goto             0  49   0                   0  ; group by finished
  33          Integer          1   5   0                   0  r[5]=1
  34        Return             3   0   0                   0
  35        IfPos              4  37   0                   0  r[4]>0 -> r[4]-=0, goto 37; output group by row subroutine start
  36      Return               3   0   0                   0
  37      AggFinal             0   8   0  avg              0  accum=r[8]
  38      Copy                 8   1   0                   0  r[1]=r[8]
  39      Copy                 7   2   0                   0  r[2]=r[7]
  40      Copy                 2  16   0                   0  r[16]=r[2]
  41      Copy                 1  17   0                   0  r[17]=r[1]
  42      Sequence             0  18   0                   0
  43      MakeRecord          16   3  15                   0  r[15]=mkrec(r[16..18]); for ephemeral_subquery_t2
  44      IdxInsert            0  15   0                   8  key=r[15]
  45    Return                 3   0   0                   0
  46    Null                   0   7   8                   0  r[7..8]=NULL; clear accumulator subroutine start
  47    Integer                0   4   0                   0  r[4]=0
  48  Return                  12   0   0                   0
  49  OpenRead                 4   7   0  k(5,B,B,B,B,B)   0  table=employees, root=7, iDb=0
  50  Rewind                   4  66   0                   0  Rewind table employees
  51    Column                 4   3  23                   0  r[23]=employees.department
  52    IsNull                23  65   0                   0  if (r[23]==NULL) goto 65
  53    SeekGE                 0  65  23                   0  key=[23..23]
  54      IdxGT                0  65  23                   0  key=[23..23]
  55      Column               4   4  25                   0  r[25]=employees.salary
  56      RealAffinity        25   0   0                   0
  57      Column               0   1  26                   0  r[26]=ephemeral(ephemeral_subquery_t2).avg(e2.salary)
  58      Le                  25  26  64  Binary           0  if r[25]<=r[26] goto 64
  59      RowId                4  19   0                   0  r[19]=employees.rowid
  60      Column               4   1  20                   0  r[20]=employees.name
  61      ColumnRange          4   3  21  2                0  r[21..22]=employees.department..salary
  62      RealAffinity        22   0   0                   0
  63      ResultRow           19   4   0                   0  output=r[19..22]
  64    Next                   0  54   0                   0
  65  Next                     4  51   0                   1
  66  Halt                     0   0   0                   0
  67  Transaction              0   1  11                   0  iDb=0 tx_mode=Read
  68  Goto                     0   1   0                   0
